About fixed and overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -291,21 +291,16 @@ header .navbar ul li a.active {
 /* hero section starts*/
 .home {
   margin-top: 6.5rem;
+  display: flex;
   flex-direction: row !important;
-  border: solid 5px greenyellow;
 }
 
-/* .home #particles-js {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-} */
-
 .home .content {
+  display: flex;
+  flex-direction: column;
+  padding: 3rem 0;
   flex: 1 1 40rem;
-  z-index: 1;
+  gap: 2rem;
 }
 
 .home img {
@@ -314,7 +309,6 @@ header .navbar ul li a.active {
   border-radius: 50%;
   padding: 0 5%;
   cursor: pointer;
-  border: solid 5px greenyellow;
 }
 
 .home .content h2 {
@@ -332,19 +326,17 @@ header .navbar ul li a.active {
   font-size: 2.5rem;
   color: #002057;
   font-weight: 600;
-  padding: 1rem 0;
 }
 
 .home .content p span {
   font-size: 2.5rem;
   color: #A83223;
   font-weight: 600;
-  padding: 1rem 0;
 }
 
 .home .btn {
+  width: fit-content;
   margin-top: 1rem;
-  position: absolute;
   line-height: 0;
   border-radius: 4em;
 }
@@ -359,22 +351,12 @@ header .navbar ul li a.active {
 }
 
 /* social icons start */
-.home .socials {
-  position: relative;
-  margin-top: 9rem;
-}
-
-.socials .social-icons {
-  padding-left: 0;
-  list-style: none;
-}
-
-.socials .social-icons li {
+.socials li {
   display: inline-block;
   margin-bottom: 14px;
 }
 
-.social-icons a {
+.socials a {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -391,50 +373,24 @@ header .navbar ul li a.active {
   transition: all 0.2s linear;
 }
 
-.social-icons a:active,
-.social-icons a:hover {
+.socials a:active,
+.socials a:hover {
   color: #fff;
   background-color: #0685da;
 }
 
-.social-icons a.github:hover {
+.socials a.github:hover {
   background-color: #0e0e0e;
 }
 
-.social-icons a.gmail:hover {
+.socials a.gmail:hover {
   background: linear-gradient(120deg, #3e65cf, #c71610, #f2a60c, #3b60c4, #08851b);
 
 }
 
-.social-icons a.linkedin:hover {
+.socials a.linkedin:hover {
   background-color: #0072b1;
 }
-
-/* hero media queries starts*/
-@media (max-width: 450px) {
-  .home .btn {
-    margin: 4rem 0;
-  }
-
-  .socials {
-    margin-top: 12rem;
-  }
-
-  .home .image img {
-    margin-top: -12rem;
-  }
-
-  .home .content p {
-    font-size: 2.2rem;
-  }
-
-  .home .content p span {
-    font-size: 2.2rem;
-  }
-}
-
-/* hero media queries ends*/
-/* hero section end */
 
 /* about section starts */
 .about {
@@ -631,6 +587,8 @@ header .navbar ul li a.active {
   justify-content: center;
   align-items: center;
   height: 30vh;
+  max-width: 80vw;
+  gap: 1rem;
   border-radius: 1rem;
   box-shadow: 0.2rem 0.5rem 1rem rgba(0, 0, 0, 0.2);
   overflow: hidden;
@@ -656,8 +614,6 @@ header .navbar ul li a.active {
   flex-direction: column;
   padding: 1rem;
   flex-wrap: wrap;
-  flex: 1 1 70rem;
-  margin-left: 1rem;
 }
 
 .education .container .box .content h3 {
@@ -679,6 +635,17 @@ header .navbar ul li a.active {
   text-align: left;
   margin: 1rem 0;
   font-weight: 700;
+}
+
+@media screen and (max-width: 600px){
+  .education .container .box{
+    flex-direction: column;
+    height: fit-content;
+  }
+  
+  .education .container .box img{
+    max-width: 100%;
+  }
 }
 
 /* projects section starts */
